- remove some lag from the discover section - add icon style to discord RPC config